--- a/layout/assets/css/style.css
+++ b/layout/assets/css/style.css
@@ -14643,7 +14643,7 @@ input {
 }
 @media (min-width: 1440px) {
     .hero-slider-bg img {
-        height: 890px;
+        height: 100vh;
     }
 }
 
