product count in shop page

--- a/Admin/layout/css/mystyle.css
+++ b/Admin/layout/css/mystyle.css
@@ -27,14 +27,17 @@ body{
      right: 23px;
      top: 11px;
 }.icofont-eye-alt{
-      color: #4099ff;
-      font-size: 14px;
-      position: absolute;
-      right: 42px;
-      top: 12px;
-      z-index: 2;
+    color: #4099ff;
+    font-size: 14px;
+    position: absolute;
+    right: 42px;
+    top: 12px;
+    z-index: 2;
     cursor:pointer;
 }.position-right{
     position: absolute;
     right: 23px;
+}
+.Category_counter{
+    float: right;
 }
