--- a/layout/assets/css/mystyle.css
+++ b/layout/assets/css/mystyle.css
@@ -207,12 +207,15 @@
     right: 0;
     top: 20px;
     z-index: 2;
-    width: 400px;
+    width: auto;
+    margin-bottom: 20px;
 }.sign-page .msg .alert{
      text-align: left;
      position: absolute;
-    
- }
+}.msg i{
+      color: #dd7070;
+      font-weight: bold;
+}
 .fa-asterisk{
     color: #df0000;
     font-size: 14px;
