--- a/layout/assets/css/mystyle.css
+++ b/layout/assets/css/mystyle.css
@@ -257,7 +257,10 @@
     cursor: pointer;
     -webkit-transition: all ease-in .3s;
     transition: all ease-in .3s;
-}
+}.btn-primary:hover, .sweet-alert button.confirm:hover, .wizard>.actions a:hover {
+     background-color: #73b4ff;
+     border-color: #73b4ff;
+ }
 /*End Create product page*/
 /*Login Page*/
 .login-box {
@@ -442,7 +445,9 @@
     position: absolute;
     right: 7px;
     top: 18px;
-}
+}.create-product-page  .price-field + .fa-asterisk {
+     right: 43px;
+ }
 /*Portfilo page*/
 .profile .card-body{
     transition: all .3s ease-in-out;
