--- a/layout/assets/css/mystyle.css
+++ b/layout/assets/css/mystyle.css
@@ -507,6 +507,7 @@ input[type="file"] {
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
+    width: 100%;
 }
 .user-avatar{
     margin-top:20px;
