upload avatar for users operation

--- a/Admin/layout/css/mystyle.css
+++ b/Admin/layout/css/mystyle.css
@@ -22,7 +22,9 @@ body{
     position: relative;
 }.form-group .input-group{
     margin-bottom: 20px;
-}
+}.avatar{
+     width: 50px;
+ }
 
 .fa-asterisk{
      color: #df0000;
