--- a/layout/assets/css/style.css
+++ b/layout/assets/css/style.css
@@ -15411,7 +15411,7 @@ input {
 }
 .product-default-single-item .image-link img {
     width: 100%;
-    height: auto;
+    height: 330px;
     transition: all 0.5s ease;
 }
 .product-default-single-item .image-link img:nth-child(2) {
