add condition to product-details.php & change delete icons in admin pages

--- a/Admin/layout/css/mystyle.css
+++ b/Admin/layout/css/mystyle.css
@@ -84,3 +84,7 @@ input[type=checkbox]:checked::after {
      padding-top: 0;
      padding-left: 26px;
  }
+.card .card-block .input-group-dropdown.custom-menu .dropdown-menu>a{
+    padding-top: 10px;
+    padding-left: 10px;
+}
