--- a/layout/assets/css/mystyle.css
+++ b/layout/assets/css/mystyle.css
@@ -578,3 +578,24 @@ input[type="file"]#file-upload {
     height: 100px;
     width: 100%;
 }
+
+/*index page Banner*/
+
+.banner-single-item .image{
+
+    z-index: 1;
+    width: 100%;
+}
+.banner-single-item .image img{
+    width: 100%;
+    height: 445px;
+}
+.banner-single-item .banner-details{
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    color: white;
+
+}.banner-single-item .banner-details .banner-title{
+    font-weight: bold;
+}
