--- a/layout/assets/css/mystyle.css
+++ b/layout/assets/css/mystyle.css
@@ -582,8 +582,6 @@ input[type="file"]#file-upload {
 /*index page Banner*/
 
 .banner-single-item .image{
-
-    z-index: 1;
     width: 100%;
 }
 .banner-single-item .image img{
@@ -594,8 +592,36 @@ input[type="file"]#file-upload {
     position: absolute;
     z-index: 2;
     width: 100%;
+    height: 100%;
     color: white;
-
+    padding: 145px 45px;
+    font-size: 19px;
+    line-height: 34px;
+    background-color: #00000042;
 }.banner-single-item .banner-details .banner-title{
-    font-weight: bold;
+     font-weight: bold;
+     font-size: 34px;
+}.banner-single-item .banner-details .banner-desc{
+      color: #f1eeee;
+}.banner-single-item .banner-details .banner-btn{
+    background-color: white;
+    color:black;
+    font-size: 15px;
+    width: 150px;
+    padding: 6px 10px;
+    margin-top: 14px;
+    border-radius: 4px;
+    text-align: left;
+    text-transform: uppercase;
+    transition: all .3s ease-in;
+}.banner-single-item .banner-details .banner-btn:hover{
+        background-color: #e2e2e2;
+        color:black;
+}.banner-single-item .banner-details .banner-btn i{
+         font-weight: 500;
+         margin-left: 10px;
+}
+ /* Product Details Page*/
+.product-large-image .img-responsive img {
+    max-height: 734px;
 }
